--- a/cezeriLAB/Home.html
+++ b/cezeriLAB/Home.html
@@ -107,7 +107,7 @@
                   </a>
               </div> 
             <div class="videoo">
-                <iframe width="560" height="315" style="transition: .5s;" src="https://www.youtube.com/watch?v=zv-wNFrcyVY&t" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" style="transition: .5s;" src="https://www.youtube.com/embed/zv-wNFrcyVY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             
             <p style="font-size:2vw; transition:0.6s;color:#fff; font-family: 'Share Tech Mono', monospace; " class="s" href="#"> Cezeri Lab Teknolojileri  <a style=" " href="" class="typewrite btn sologan" data-period="2000" data-type='[ "ROBOTİK", "MEKANİK", "YAZILIM" ]'> </a> çözümleri ...       </p>
