--- a/cezeriLAB/Home.html
+++ b/cezeriLAB/Home.html
@@ -806,7 +806,7 @@
                                       <i class="fas fa-envelope " style="padding-left: 2vw;  " ></i> 
                                     </div>
                                     <div class="col-sm-10 animi" style="padding-left: 2vw; padding-top: 1vw;">
-                                      <strong class="font-weight-bold" style="font-size: 2.5vh"> E-mail : hakmesyo@gmail.com </strong> 
+                                      <strong class="font-weight-bold" style="font-size: 2.5vh"> E-mail : test@email.com </strong> 
                                     </div>
                                   </div>
                               </div>
@@ -818,7 +818,7 @@
                                         <i class="fas fa-mobile " style="padding-left: 2vw;" ></i> 
                                       </div>
                                       <div class="col-sm-10" style="padding-left: 2vw; padding-top: 1vw;">
-                                         <strong class="font-weight-bold" style="font-size: 2.5vh"> Tel: +90 532 590 80 01 </strong> 
+                                         <strong class="font-weight-bold" style="font-size: 2.5vh"> Tel: +90 5555555555 </strong> 
                                       </div>
                                     </div>
                                 </div>
@@ -878,7 +878,7 @@
              <a  style="padding-left: 3vw;" href="#"><img width="17" src="foto/icons/github1.png" alt="facebook"></a> 
          </div>
          <div class="col-sm-4"> 
-           <p style="font-size: 2.5vmin; color: rgb(255, 255, 255);font-family: 'Fira Sans', sans-serif;">Copyright © CezeriLab 2019. All Rights Reserved</p>
+           <p style="font-size: 2.0vmin; color: rgb(255, 255, 255);font-family: 'Fira Sans', sans-serif;">Copyright © CezeriLab 2019. All Rights Reserved</p>
          </div> 
          <div class="col-sm-4">
            <p style="font-size: 2.5vmin; color: #fff; padding-left:15vw;font-family: 'Shadows Into Light', cursive;">Designed By <a style="color:rgb(119, 117, 255); font-size:20px" href="https://www.linkedin.com/in/25hasanaser/" target="_blank"> Hasan Naser </a></p>
